<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, MainActivity!</string>
    <string name="app_name">Punt de venda Encaixa\'t</string>
    <string name="hello_header">Clients llestos per usar Encaixa\'t</string>
    <string name="header_waiting">Esperant per fer una encaixada</string>
    <string name="header_finished">Encaixades realitzades</string>
    
    <string name="number_0">0</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
	<string name="number_c">C</string>
	<string name="Ok">D\'acord</string>
	<string name="Cancel">Cancel·la</string>
</resources>