<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/panel_white"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        style="@style/SectionHeader"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello_header" />

    <org.catdroid.encaixat.android.shop.view.HorizontalListView
        android:id="@+id/HelloListView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
    </org.catdroid.encaixat.android.shop.view.HorizontalListView>
  
    <TextView
        android:id="@+id/TextView02"
        style="@style/SectionHeader"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/header_waiting" />

    <org.catdroid.encaixat.android.shop.view.HorizontalListView
        android:id="@+id/horizontalListView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
    </org.catdroid.encaixat.android.shop.view.HorizontalListView>

    <TextView
        android:id="@+id/TextView01"
        style="@style/SectionHeader"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/header_finished" />

    <org.catdroid.encaixat.android.shop.view.HorizontalListView
        android:id="@+id/horizontalListView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
    </org.catdroid.encaixat.android.shop.view.HorizontalListView>

</LinearLayout>